CCMenu Release Notes

CCMenu 11.0

* Added special handling of authentication to make CCMenu work with Cloudbees. 


CCMenu 11.0

* New icons based on Ionicons, providing more contrast and symbols in addition
  to colour.
* Black and white mode for status menu item.
* New menu item to retrieve status from servers.
* Fixes an issue with project URLs containing a fragment.


CCMenu 1.10.3

* Fixes a recently introduced bug that made the keyboard shortcuts for cut,
  copy, paste inactive.


CCMenu 1.10.2

* Built with App Transport Security disabled for El Capitan so that servers
  that aren't offering HTTPS or use self-signed certificates can be used, too.
* Fixed a bug that could prevent CCMenu from opening project URLs that contain
  spaces or other special characters.
* Fixed display of application menu that is shown when the preferences panel
  is open and CCMenu displays the application icon in the dock.


CCMenu 1.10.1

* Fixed a bug that could occur when adding projects from a server that
  requires authentication.
  
  
CCMenu 1.10

* It is now possible to select for which build results user notifications
  are displayed. Sounds can be chosen independently.
* The app icon is shown in the dock and application switcher when the 
  preferences window is open. This can help with switching in and out of CCMenu
  when copying feed URLs.
* A new advanced preference makes it possible to reject all certificates that
  cannot be verified automatically. Normally CCMenu asks the user how to proceed.


CCMenu 1.9

* Can display last build label in menu. 
* Special workaround for authenticating against Hudson and Jenkins. 
* No longer tries to autocomplete from URL history when typing.
* Using Git SHA as build version.


CCMenu 1.8.1 (SourceForge only)

* Added final reminder about App Store move.


CCMenu 1.8

* Prompt user when server certificate is not trusted.
* Added retina icons. (This was possible because Luke had already created the 