@@ -22,8 +22,6 @@
 	IBOutlet NSArrayController		*soundNamesViewController;
 
 	IBOutlet NSView					*advancedPrefsView;
-    
-	IBOutlet NSButton				*symbolInMenuBarButton;
 }
 
 - (IBAction)showWindow:(id)sender;
