@@ -10,7 +10,7 @@
 	<true/>
 	<key>UseColorInMenuBar</key>
 	<string>YES</string>
-	<key>UseSymbolInMenuBar</key>
+	<key>UseSymbolsForAllStatesInMenuBar</key>
 	<string>NO</string>
 	<key>PollInterval</key>
 	<string>5</string>
